--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - "80:80"
       - "8080:8080"
     volumes:
-      - ./traefik.toml:/etc/traefik/traefik.toml
+      - ./traefik.yaml:/etc/traefik/traefik.yaml:ro
       - /var/run/docker.sock:/var/run/docker.sock
     command:
       - "--api.insecure=true"
